--- a/GenshinAccount/FormMain.resx
+++ b/GenshinAccount/FormMain.resx
@@ -130,10 +130,13 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="lvwAcct.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 202</value>
+    <value>15, 269</value>
+  </data>
+  <data name="lvwAcct.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="lvwAcct.Size" type="System.Drawing.Size, System.Drawing">
-    <value>349, 270</value>
+    <value>426, 359</value>
   </data>
   <data name="lvwAcct.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -157,13 +160,13 @@
     <value>NoControl</value>
   </data>
   <data name="btnSaveCurr.Location" type="System.Drawing.Point, System.Drawing">
-    <value>368, 249</value>
+    <value>450, 332</value>
   </data>
   <data name="btnSaveCurr.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="btnSaveCurr.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 33</value>
+    <value>165, 44</value>
   </data>
   <data name="btnSaveCurr.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -190,13 +193,13 @@
     <value>NoControl</value>
   </data>
   <data name="btnSwitch.Location" type="System.Drawing.Point, System.Drawing">
-    <value>368, 291</value>
+    <value>450, 388</value>
   </data>
   <data name="btnSwitch.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="btnSwitch.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 36</value>
+    <value>165, 48</value>
   </data>
   <data name="btnSwitch.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -220,10 +223,13 @@
     <value>True</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 173</value>
+    <value>11, 231</value>
+  </data>
+  <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 18</value>
+    <value>136, 24</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -250,13 +256,13 @@
     <value>NoControl</value>
   </data>
   <data name="btnDelete.Location" type="System.Drawing.Point, System.Drawing">
-    <value>368, 336</value>
+    <value>450, 448</value>
   </data>
   <data name="btnDelete.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="btnDelete.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 36</value>
+    <value>165, 48</value>
   </data>
   <data name="btnDelete.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -283,10 +289,13 @@
     <value>True</value>
   </data>
   <data name="linkLabel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>396, 400</value>
+    <value>484, 533</value>
+  </data>
+  <data name="linkLabel1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="linkLabel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>80, 18</value>
+    <value>82, 24</value>
   </data>
   <data name="linkLabel1.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -310,10 +319,13 @@
     <value>True</value>
   </data>
   <data name="chkAutoStartYS.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 113</value>
+    <value>15, 151</value>
+  </data>
+  <data name="chkAutoStartYS.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="chkAutoStartYS.Size" type="System.Drawing.Size, System.Drawing">
-    <value>196, 22</value>
+    <value>198, 28</value>
   </data>
   <data name="chkAutoStartYS.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -340,10 +352,13 @@
     <value>NoControl</value>
   </data>
   <data name="chkSkipTips.Location" type="System.Drawing.Point, System.Drawing">
-    <value>214, 113</value>
+    <value>262, 151</value>
+  </data>
+  <data name="chkSkipTips.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="chkSkipTips.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 22</value>
+    <value>180, 28</value>
   </data>
   <data name="chkSkipTips.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -367,13 +382,13 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="txtPath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 40</value>
+    <value>15, 53</value>
   </data>
   <data name="txtPath.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="txtPath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>432, 28</value>
+    <value>527, 31</value>
   </data>
   <data name="txtPath.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -394,13 +409,13 @@
     <value>True</value>
   </data>
   <data name="lblPathTag.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 16</value>
+    <value>11, 21</value>
   </data>
   <data name="lblPathTag.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>5, 0, 5, 0</value>
   </data>
   <data name="lblPathTag.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 18</value>
+    <value>136, 24</value>
   </data>
   <data name="lblPathTag.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -424,13 +439,13 @@
     <value>Top, Right</value>
   </data>
   <data name="btnChoosePath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>452, 37</value>
+    <value>552, 49</value>
   </data>
   <data name="btnChoosePath.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="btnChoosePath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>51, 34</value>
+    <value>62, 45</value>
   </data>
   <data name="btnChoosePath.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
@@ -456,18 +471,6 @@
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>168, 17</value>
   </metadata>
-  <data name="contextMenuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 70</value>
-  </data>
-  <data name="&gt;&gt;contextMenuStrip1.Name" xml:space="preserve">
-    <value>contextMenuStrip1</value>
-  </data>
-  <data name="&gt;&gt;contextMenuStrip1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="notifyIcon.Text" xml:space="preserve">
-    <value>原神账户切换启动工具</value>
-  </data>
   <data name="显示主界面ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>170, 30</value>
   </data>
@@ -483,6 +486,18 @@
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
     <value>167, 6</value>
   </data>
+  <data name="contextMenuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>171, 70</value>
+  </data>
+  <data name="&gt;&gt;contextMenuStrip1.Name" xml:space="preserve">
+    <value>contextMenuStrip1</value>
+  </data>
+  <data name="&gt;&gt;contextMenuStrip1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="notifyIcon.Text" xml:space="preserve">
+    <value>原神账户切换启动工具</value>
+  </data>
   <data name="chkMinimizeToNotifyArea.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -490,10 +505,13 @@
     <value>NoControl</value>
   </data>
   <data name="chkMinimizeToNotifyArea.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 141</value>
+    <value>15, 188</value>
+  </data>
+  <data name="chkMinimizeToNotifyArea.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="chkMinimizeToNotifyArea.Size" type="System.Drawing.Size, System.Drawing">
-    <value>142, 22</value>
+    <value>144, 28</value>
   </data>
   <data name="chkMinimizeToNotifyArea.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -517,13 +535,13 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="txtStartParam.Location" type="System.Drawing.Point, System.Drawing">
-    <value>113, 76</value>
+    <value>138, 101</value>
   </data>
   <data name="txtStartParam.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="txtStartParam.Size" type="System.Drawing.Size, System.Drawing">
-    <value>331, 28</value>
+    <value>404, 31</value>
   </data>
   <data name="txtStartParam.TabIndex" type="System.Int32, mscorlib">
     <value>20</value>
@@ -547,13 +565,13 @@
     <value>NoControl</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 81</value>
+    <value>16, 108</value>
   </data>
   <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>5, 0, 5, 0</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 18</value>
+    <value>100, 24</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>21</value>
@@ -573,9 +591,6 @@
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <metadata name="tipHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>400, 17</value>
-  </metadata>
   <data name="picHelpSatrtParam.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
@@ -583,13 +598,13 @@
     <value>NoControl</value>
   </data>
   <data name="picHelpSatrtParam.Location" type="System.Drawing.Point, System.Drawing">
-    <value>452, 81</value>
+    <value>552, 108</value>
   </data>
   <data name="picHelpSatrtParam.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="picHelpSatrtParam.Size" type="System.Drawing.Size, System.Drawing">
-    <value>24, 24</value>
+    <value>29, 32</value>
   </data>
   <data name="picHelpSatrtParam.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>CenterImage</value>
@@ -597,6 +612,9 @@
   <data name="picHelpSatrtParam.TabIndex" type="System.Int32, mscorlib">
     <value>22</value>
   </data>
+  <metadata name="tipHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>400, 17</value>
+  </metadata>
   <data name="picHelpSatrtParam.ToolTip" xml:space="preserve">
     <value>如果你不知道什么是启动参数请不要填写。
 常见启动参数：
@@ -615,20 +633,17 @@
   <data name="&gt;&gt;picHelpSatrtParam.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <metadata name="tipHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>400, 17</value>
-  </metadata>
   <data name="pictureBox1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="pictureBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>161, 141</value>
+    <value>197, 188</value>
   </data>
   <data name="pictureBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="pictureBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>24, 24</value>
+    <value>29, 32</value>
   </data>
   <data name="pictureBox1.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>CenterImage</value>
@@ -653,20 +668,20 @@
   <data name="&gt;&gt;pictureBox1.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <metadata name="tipHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>400, 17</value>
-  </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>9, 18</value>
+    <value>11, 24</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>514, 484</value>
+    <value>628, 645</value>
+  </data>
+  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
+    <value>微软雅黑, 9pt</value>
   </data>
   <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>5, 5, 5, 5</value>
   </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
